--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -3,29 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Travel Recommendation</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+  <header>
+    <h1><a href="./travel_recommendation.html">TravelStars</a></h1>
     <nav>
-        <i class="bi bi-airplane-engines"></i>
         <ul>
-            <li id="logo"><a>LOGO</a></li>    
-            <li>Home</li>
-            <li>About Us</li>
-            <li>Contact</li>
+            <li><a href="./travel_recommendation.html">Home</a></li>
+            <li><a href="./about.html">About Us</a></li>
+            <li><a href="./contact.html">Contact</a></li>
         </ul>
-        <form action="">
-            <input type="text" placeholder="Enter">
-            <button>Search</button>
-            <button>Clear</button>
-        </form>
     </nav>
+    <form action="" id="form">
+        <input type="text" id="searchInput" placeholder="Enter">
+        <button>Search</button>
+    </form>
+    <button onclick="clearSearch()">Clear</button>
+  </header>
+  <div id="content">
     <section>
-        <h1>Explore dream destination</h1>
-        <p id="intro">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime aliquam nobis deserunt aliquid praesentium mollitia quibusdam veniam cum, vel recusandae at corrupti tempora enim sed quis similique dicta! Totam, nulla!</p>
+      <br>
+      <div>
+        <h1>Explore</h1>
+        <h1>Dream</h1>
+        <h1>Destination</h1>
+      </div>
+      <br>
+      <div>
+        <p id="intro">It encourages exploration of unfamiliar
+        territories, embracing diverce cultures and landscapes, while
+      persuing the desired destination that captivates the heart and ignites
+      a sense of wonder.</p>
         <button>Book Now</button>
-    </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+      </div>
+      </section>
+      <section id="found"></section>
+  </div> <!-- end of content -->
+  
+  <script src="./travel_recommendation.js"></script>
 </body>
 </html>
